--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "tailwind-init": "tailwindcss init"
   },
   "dependencies": {
+    "framer-motion": "^12.19.1",
     "next": "15.3.3",
     "next-intl": "^4.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-intersection-observer": "^9.16.0",
     "swiper": "^11.2.8"
   },
   "devDependencies": {
